tests/e2e/not_allowed/switch.error
Error: syntax error in story at line 1, column 1

1|    switch = 1
      ^^^^^^

E0030: `switch` is reserved for future use
